Fix z-index styles/6-filters.css at web-static

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -70,6 +70,7 @@
     padding-bottom: 39px;
     padding-left: 23px;
     padding-top: 23px;
+    z-index: 1;
 }
 
 .popover h2 {
